--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +153,8 @@
     "\n",
     "    relations = relations.to_dict()\n",
     "\n",
-    "    tasks = mark_complete(relations, start, tasks)\n",
-    "    return bfs(relations, start, end, tasks)\n",
+    "    tasks,visited = mark_complete(relations, start, tasks)\n",
+    "    return bfs(relations, start, end, tasks, visited)\n",
     "\n",
     "\n",
     "def mark_complete(graph, root, ids):\n",
@@ -168,17 +168,19 @@
     "    \"\"\"\n",
     "    queue = [root]\n",
     "    ids[root] = True\n",
+    "    visited=[root]\n",
     "    while queue:\n",
     "        s = queue.pop(0)\n",
     "        if s in graph.keys():\n",
     "            for node in graph[s]:\n",
     "                if not ids[node]:\n",
     "                    queue.append(node)\n",
+    "                    visited.append(root)\n",
     "                ids[node] = True\n",
-    "    return ids\n",
+    "    return ids,visited\n",
     "\n",
     "\n",
-    "def bfs(graph, root, leaf, ids):\n",
+    "def bfs(graph, root, leaf, ids, visited):\n",
     "    \"\"\"\n",
     "    Finding the best path between two tasks using Breadth First Search\n",
     "    parameters:\n",
@@ -186,10 +188,12 @@
     "    root: Start task\n",
     "    leaf: goal task\n",
     "    ids: All of the tasks and their state of completion\n",
+    "    visited: all the tasks that is assumed to have completed \n",
     "    \"\"\"\n",
     "    queue = [leaf]\n",
     "    ids[leaf] = True\n",
     "    path = []\n",
+    "    start = False\n",
     "    while queue:\n",
     "        s = queue.pop(0)\n",
     "        path.append(s)\n",
@@ -197,11 +201,13 @@
     "            for node in graph[s]:\n",
     "                if not ids[node]:\n",
     "                    queue.append(node)\n",
-    "                if ids[node]:\n",
+    "                if node in visited:\n",
     "                    if node not in path:\n",
-    "                        path.append(root)\n",
+    "                        start = True\n",
     "                ids[node] = True\n",
-    "\n",
+    "    if start:\n",
+    "        path.append(root)\n",
+    "        \n",
     "    return path[::-1]\n",
     "\n",
     "\n",
@@ -217,6 +223,7 @@
     "    popularity = model_popularity(points_analysis)\n",
     "\n",
     "    pipeline = pipeline_dependency('relations.txt', 'task_ids.txt', 'question.txt')\n",
+    "\n",
     "\n",
     "\n",
     "\n",
